--- a/src/app/unit-card/unit-card.component.html
+++ b/src/app/unit-card/unit-card.component.html
@@ -1,4 +1,4 @@
-<div class="unit-wrapper" >
+<div class="unit-wrapper" [attr.data-unit]="unit.name">
     <div class="top-card" style="background-image: linear-gradient(0deg, #232323 0%, rgba(35, 35, 35, 0.00) 50%), url(&quot;../assets/cards/{{unit.name}}2.png&quot;);">
         <div class="content-wrapper">
             <div class="{{unit.tag}}-tag">{{unit.tag}}</div>
@@ -11,12 +11,11 @@
                     </div>
                     <div class="buffs">
                         <img *ngIf="unit.isDPS" src="assets/effects/buff_mdps.png" alt="Main DPS">
-                        <img *ngIf="unit.isBuffer" src="assets/effects/buff_mdps.png" alt="Main DPS">
+                        <img *ngIf="unit.isBuffer" src="assets/effects/buff_buffer.png" alt="Main DPS">
                         <img *ngIf="unit.isHeal" src="assets/effects/buff_mdps.png" alt="Main DPS">
                         <img *ngIf="unit.isHealB" src="assets/effects/buff_mdps.png" alt="Main DPS">
                         <img *ngIf="unit.isShatter" src="assets/effects/buff_mdps.png" alt="Main DPS">
                         <img *ngIf="unit.isTaunt" src="assets/effects/buff_mdps.png" alt="Main DPS">
-         
                     </div>
                 </div>
             </div>
