--- a/src/app/units-index/units-index.component.scss
+++ b/src/app/units-index/units-index.component.scss
@@ -3,7 +3,7 @@ $content: #29292A; // not final
 $white: #F5F5F5; // not final
 // $font: "Inter", sans-serif;
 $font: 'Exo', sans-serif;
-// $font: 'Exo 2', sans-serif; 
+// $font: 'Exo 2', sans-serif;
 
 .category-filter {
     display: flex;
@@ -103,9 +103,12 @@ $font: 'Exo', sans-serif;
     grid-template-columns: repeat(5, 1fr);
     gap: 30px;
     justify-items: center;
-    
 
+    app-unit-card {
+        width: 100%;
+    }
 }
+
 .inner-index {
     display: flex;
     flex-direction: column;
