--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,4 +27,10 @@ a:hover {
 main {
     display: flex;
     justify-content: center;
+
+    app-units-index {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
 }
