--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
         <a routerLink="home">Mana</a>
      </li>
     <li class="menu-item">
-        <a href="index.html">Healing Guide</a>
+        <a routerLink="/healingguide">Healing Guide</a>
      </li>
     <li class="menu-item">
         <a href="teams.html">Teams</a>
