--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,7 @@ body {
     color: $white;
     font-family: $font;
     overflow-x: clip; // ive no idea when this was introduced but it fixes the overflow-x issue caused by the fixed nav bar
+    overflow-y: scroll;
 }
 
 a {
