added unit page (click on teams to view)

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,7 +8,7 @@
         <a routerLink="/healingguide">Healing Guide</a>
      </li>
     <li class="menu-item">
-        <a href="teams.html">Teams</a>
+        <a routerLink="/unitpage">Teams</a>
      </li>
     <li class="menu-item">
         <a href="guides.html">Guides</a>
