--- a/src/app/unit-page/unit-page.component.scss
+++ b/src/app/unit-page/unit-page.component.scss
@@ -1,17 +1,27 @@
 .unit-wrapper {
-    max-width: 1180px;
+    max-width: 1220px;
     width: 100%;
+    padding: 0 20px;
 
+    // border-bottom: 140px solid green;
+    // border-right: 140px solid transparent;
+    // border-top: 5px solid gold; | cant use this, might need a gold bar svg
+    // position: relative;
 
     .header-element {
         display: flex;
         margin: 40px 0 0 0;
-        width: 1180px;
+        // width: 1180px; we do not set static widths to content containers! we do the next 2 lines below
+        // max-width: 1220px; this is inherited from the parent
+        width: 100%;
         padding: 10px 20px;
         background-image: url("/assets/backgrounds/header-element.svg");
         background-size: cover;
-        height: 141px;
+        background-repeat: no-repeat;
+        background-position: right; // ?
+        // height: 141px; i know this is because of the background being 1180x141, we might redo the background with CSS altogether
 
+        // position: absolute;
         .unit-avatar {
             display: flex;
             justify-content: left;
@@ -20,14 +30,13 @@
         }
 
         .unit-avatar img {
-            width: 130px;
-            height: 130px;
-            object-fit: cover;
+            width: 120px;
         }
 
         .unit-name-element {
             display: flex;
             justify-content: center;
+            gap: 2px;
             margin: 0 40px 0 0;
             flex-direction: column;
             min-width: 130px;
@@ -38,7 +47,6 @@
                 font-weight: 600;
                 text-transform: uppercase;
                 line-height: 24px;
-                padding-top: 10px;
             }
 
             .unit-weapon-name {
@@ -46,41 +54,38 @@
                 font-size: 16px;
                 font-weight: 200;
                 font-style: italic;
-                padding-bottom: 5px;
             }
 
             .unit-element {
                 display: flex;
                 justify-content: left;               
                 align-items: center;
+                gap: 5px;
             }
 
             .unit-element img {
-                width: 38px;
-                margin-right: 5px;
+                width: 36px;
             }
         }
 
         .unit-stats {
             display: flex;
             flex-direction: column;
-            justify-content: flex-end;
-            margin-right: 30px;
-            .top-stats{
+            justify-content: center;
+            gap: 20px;
+            margin: 0 40px 0 0;
+
+            .top-stats, .bottom-stats {
                 display: flex;
-                padding-bottom: 20px;
-            }
-            .bottom-stats {
-                display: flex;
-                padding-bottom: 15px;
+                gap: 20px;
             }
         }
 
         .unit-buffs{
             display: flex;
-            justify-content: left;    
+            gap: 20px;
             align-items: flex-end;
-            padding-bottom: 15px;
+            padding-bottom: 14px;
         }
 
     }
@@ -88,14 +93,13 @@
 
 .stats {
     display: flex;
+    gap: 10px;
     align-items: center;
     color: #F5F5F5;
     font-size: 16px;
     font-weight: 400;
     font-style: italic;
-    margin-right: 20px;
 }
 .stats img{
-    width: 34px;
-    margin-right: 10px;   
+    width: 36px;
 }
