Import home, mobile menu and relevant JS

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
 
 <ul class="main-menu">
     <li class="menu-item">
-        <a routerLink="home">Mana</a>
+        <a routerLink="/home">Mana</a>
      </li>
     <li class="menu-item">
         <a routerLink="/healingguide">Healing Guide</a>
@@ -20,12 +20,12 @@
 </ul>
 <div class="main-menu_mobile">
     <h3 class="home">
-        <a href="home.html">Mana</a>
+        <a routerLink="/home">Mana</a>
     </h3>
     <img class="menu-icon" src="../assets/other/menu-icon.svg" alt="">
     <ul class="burger-menu">
         <li class="menu-item">
-            <a class="hyperlink" href="index.html">
+            <a class="hyperlink" routerLink="/healingguide">
                 <div class="item-wrapper">
                     <img src="../assets/other/double-cross.svg" alt="Healing Guide Icon">
                     <span>Healing Guide</span>
@@ -52,7 +52,7 @@
             </a>
         </li>
         <li class="menu-item beta">
-            <a class="hyperlink" href="unitindex.html">
+            <a class="hyperlink" routerLink="/unitsindex">
                 <div class="item-wrapper">
                     <img src="../assets/other/guides.svg" alt="Beta Icon">
                     <span>Index</span>
