--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 $main: #18181A; // not final
 $content: #29292A; // not final
 $white: #F5F5F5; // not final
+$border: #6A6666;
 // $font: "Inter", sans-serif;
 $font: 'Exo', sans-serif;
 // $font: 'Exo 2', sans-serif;
