--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,3 +1,5 @@
+@import '../../styles.scss';
+
 .footer {
     margin: 80px 0 0 0;
     display: flex;
@@ -5,7 +7,7 @@
     justify-content: space-around;
     width: 100%;
     height: 100px;
-    border-top: 2px solid #6A6666; // should be new $border color
+    border-top: 2px solid $border; // should be new $border color
     font-size: 18px;
     font-weight: 300;
 
