Import guides (unfinished), modify footer and header

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,19 +1,33 @@
 <footer class="footer">
-    <div>
-        <img src="../assets/other/mana.svg" alt="Mana Icon">
-        <span>Mana Sanctuary</span>
-    </div>
-    <div class="footer-nav-container">
-        <ul class="nav">
-            <!-- fill it as we go -->
-            <li><a href="home.html">Home</a></li>
-            <li><a href="">Healing Guide</a></li>
-            <li><a href="teams.html">Teams</a></li>
-            <li><a href="guides.html">Guide</a></li>
-            <li><a href="">About Us</a></li>
-        </ul>
-    </div>
-    <div class="copyright">
-        <span>© 2023 Mana Sanctuary.</span>
-    </div>
+  <div>
+    <img src="../assets/other/mana.svg" alt="Mana Icon">
+    <span>Mana Sanctuary</span>
+  </div>
+  <div class="footer-nav-container">
+    <ul class="nav">
+      <!-- fill it as we go -->
+      <li>
+        <a routerLink="/home">Home</a>
+      </li>
+      <li>
+        <a routerLink="/healingguide">Healing Guide</a>
+      </li>
+      <li>
+        <a routerLink="/unitpage">Teams</a>
+        <!-- Teams routing to /unitpage is temporary -->
+      </li>
+      <li>
+        <a routerLink="/guides">Guides</a>
+      </li>
+      <li>
+        <a routerLink="/unitsindex">Index</a>
+      </li>
+      <li>
+        <a href="">About Us</a>
+      </li>
+    </ul>
+  </div>
+  <div class="copyright">
+    <span>© 2023 Mana Sanctuary.</span>
+  </div>
 </footer>
