--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,65 +1,65 @@
 <header class="header">
-
-<ul class="main-menu">
+  <ul class="main-menu">
     <li class="menu-item">
-        <a routerLink="/home">Mana</a>
-     </li>
+      <a routerLink="/home">Mana</a>
+    </li>
     <li class="menu-item">
-        <a routerLink="/healingguide">Healing Guide</a>
-     </li>
+      <a routerLink="/healingguide">Healing Guide</a>
+    </li>
     <li class="menu-item">
-        <a routerLink="/unitpage">Teams</a>
-     </li>
+      <a routerLink="/unitpage">Teams</a>
+      <!-- Teams routing to /unitpage is temporary -->
+    </li>
     <li class="menu-item">
-        <a href="guides.html">Guides</a>
+      <a routerLink="/guides">Guides</a>
     </li>
     <li class="menu-item beta">
-        <a routerLink="/unitsindex">Index</a>
-        <span class="beta-tag">Beta</span>
+      <a routerLink="/unitsindex">Index</a>
+      <span class="beta-tag">Beta</span>
     </li>
-</ul>
-<div class="main-menu_mobile">
+  </ul>
+  <div class="main-menu_mobile">
     <h3 class="home">
-        <a routerLink="/home">Mana</a>
+      <a routerLink="/home">Mana</a>
     </h3>
     <img class="menu-icon" src="../assets/other/menu-icon.svg" alt="">
     <ul class="burger-menu">
-        <li class="menu-item">
-            <a class="hyperlink" routerLink="/healingguide">
-                <div class="item-wrapper">
-                    <img src="../assets/other/double-cross.svg" alt="Healing Guide Icon">
-                    <span>Healing Guide</span>
-                </div>
-                <img src="../assets/other/arrow-right.svg" alt="Right Arrow">
-            </a>
-        </li>
-        <li class="menu-item">
-            <a class="hyperlink" href="teams.html">
-                <div class="item-wrapper">
-                    <img src="../assets/other/teams.svg" alt="Teans Icon">
-                    <span>Teams</span>
-                </div>
-                <img src="../assets/other/arrow-right.svg" alt="Right Arrow">
-            </a>
-        </li>
-        <li class="menu-item">
-            <a class="hyperlink" href="guides.html">
-                <div class="item-wrapper">
-                    <img src="../assets/other/guides.svg" alt="Guides Icon">
-                    <span>Guides</span>
-                </div>
-                <img src="../assets/other/arrow-right.svg" alt="Right Arrow">
-            </a>
-        </li>
-        <li class="menu-item beta">
-            <a class="hyperlink" routerLink="/unitsindex">
-                <div class="item-wrapper">
-                    <img src="../assets/other/guides.svg" alt="Beta Icon">
-                    <span>Index</span>
-                </div>
-                <img src="../assets/other/arrow-right.svg" alt="Right Arrow">
-            </a>
-        </li>
+      <li class="menu-item">
+        <a class="hyperlink" routerLink="/healingguide">
+          <div class="item-wrapper">
+            <img src="../assets/other/double-cross.svg" alt="Healing Guide Icon">
+            <span>Healing Guide</span>
+          </div>
+          <img src="../assets/other/arrow-right.svg" alt="Right Arrow">
+        </a>
+      </li>
+      <li class="menu-item">
+        <a class="hyperlink" href="teams.html">
+          <div class="item-wrapper">
+            <img src="../assets/other/teams.svg" alt="Teans Icon">
+            <span>Teams</span>
+          </div>
+          <img src="../assets/other/arrow-right.svg" alt="Right Arrow">
+        </a>
+      </li>
+      <li class="menu-item">
+        <a class="hyperlink" href="guides.html">
+          <div class="item-wrapper">
+            <img src="../assets/other/guides.svg" alt="Guides Icon">
+            <span>Guides</span>
+          </div>
+          <img src="../assets/other/arrow-right.svg" alt="Right Arrow">
+        </a>
+      </li>
+      <li class="menu-item beta">
+        <a class="hyperlink" routerLink="/unitsindex">
+          <div class="item-wrapper">
+            <img src="../assets/other/guides.svg" alt="Beta Icon">
+            <span>Index</span>
+          </div>
+          <img src="../assets/other/arrow-right.svg" alt="Right Arrow">
+        </a>
+      </li>
     </ul>
-</div>
+  </div>
 </header>
