--- a/src/app/unit-card/unit-card.component.html
+++ b/src/app/unit-card/unit-card.component.html
@@ -22,6 +22,7 @@
       </div>
     </div>
   </div>
+  <!-- TOP AND BACK SHUFFLE ON HOVER -->
   <div class="back-card"
     style="background-image: linear-gradient(0deg, #232323 0%, rgba(35, 35, 35, 0.00) 50%), url(&quot;../assets/cards/{{unit.name}}1.png&quot;);">
     <div class="content-wrapper">
