--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,14 +4,30 @@
     <span class="announcement-text">0.1 Update Notes - Wait, notes for the devs...? Nonsense...</span>
   </div>
   <div class="join-discord">
-    <a href="https://discord.gg/manacommunity" class="hyperlink-container" target="_blank">
+    <a href="https://discord.gg/FPtYFtpUF3" class="hyperlink-container" target="_blank">
       <span class="join-text">Join us on Discord </span>
       <img src="../../assets/other/discord-icon.png" alt="Discord Icon">
     </a>
   </div>
 </div>
 <section class="banner">
-  <div class="image-container"></div>
+  <splide [options]="{type: 'loop', perPage: 1, autoplay: true, interval: 5000}" containerClass="splide-fix">
+    <splide-slide>
+      <img src="../../assets/backgrounds/banner_background.jpg"/>
+    </splide-slide>
+    <splide-slide>
+      <img src="../../assets/backgrounds/banner_background.jpg"/>
+    </splide-slide>
+    <splide-slide>
+      <img src="../../assets/backgrounds/banner_background.jpg"/>
+    </splide-slide>
+    <splide-slide>
+      <img src="../../assets/backgrounds/banner_background.jpg"/>
+    </splide-slide>
+    <splide-slide>
+      <img src="../../assets/backgrounds/banner_background.jpg"/>
+    </splide-slide>
+  </splide>
   <div class="content-container">
     <div class="inner">
       <h1 class="title">Mana Sanctuary</h1>
@@ -192,7 +208,7 @@
         <img src="../../assets/other/huma-meryl-think.webp" alt="Huma and Meryl Sticker">
       </div>
       <span class="subtitle">
-        Join our community on <a href="https://discord.gg/manacommunity">Discord</a> and just @Kath
+        Join our community on <a href="https://discord.gg/FPtYFtpUF3">Discord</a> and just @Kath
       </span>
     </div>
   </div>
