--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -10,20 +10,20 @@
         <a routerLink="/home">Home</a>
       </li>
       <li>
-        <a routerLink="/healingguide">Healing Guide</a>
+        <a routerLink="/healing-guide">Healing Guide</a>
       </li>
       <li>
-        <a routerLink="/unitpage">Teams</a>
+        <a routerLink="/unit-page">Teams</a>
         <!-- Teams routing to /unitpage is temporary -->
       </li>
       <li>
         <a routerLink="/guides">Guides</a>
       </li>
       <li>
-        <a routerLink="/unitsindex">Index</a>
+        <a routerLink="/units-index">Index</a>
       </li>
       <li>
-        <a href="">About Us</a>
+        <a routerLink="/about-us">About Us</a>
       </li>
     </ul>
   </div>
