Normalise buttons and som commonly used styles, create intro section for About Us

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -20,7 +20,7 @@
                 transition: 0.2s ease-out;
 
                 &:hover {
-                    color: #7DC9FF;
+                    color: $link;
                 }
             }
         }
