--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -32,8 +32,7 @@
     <div class="inner">
       <h1 class="title">Mana Sanctuary</h1>
       <p class="introduction">A comprehensive Tower of Fantasy <br>athenaeum of guides and knowledge</p>
-      <a href="about-us.html" class="about-us-btn">About Us</a> 
-      <!-- TODO: Change to /aboutus when we make the Angular component for the router later -->
+      <a routerLink="/about-us" class="white-black">About Us</a> 
     </div>
   </div>
 </section>
@@ -98,7 +97,7 @@
             <img src="../../assets/other/double-cross.svg" alt="Benediction">
           </div>
         </div>
-        <a class="title" routerLink="/healingguide">Healing Guide</a>
+        <a class="black-white-medium special" routerLink="/healing-guide">Healing Guide</a>
         <div class="bottom-right">
           <div class="icon-block">
             <img src="../../assets/other/target.svg" alt="DPS">
@@ -178,8 +177,8 @@
           </div>
         </div>
         <div class="buttons-block">
-          <a href="teams.html" class="button">Teams</a>
-          <a href="calculator.html" class="button">Calculator</a>
+          <a href="teams.html" class="black-white-medium">Teams</a>
+          <a href="calculator.html" class="black-white-medium">Calculator</a>
           <!-- TODO: Change both of these to Angular components for the router later -->
         </div>
       </div>
@@ -208,7 +207,7 @@
         <img src="../../assets/other/huma-meryl-think.webp" alt="Huma and Meryl Sticker">
       </div>
       <span class="subtitle">
-        Join our community on <a href="https://discord.gg/FPtYFtpUF3">Discord</a> and just @Kath
+        Join our community on <a href="https://discord.gg/FPtYFtpUF3" class="hyperlink">Discord</a> and just @Kath
       </span>
     </div>
   </div>
