--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,1 +1,17 @@
-<p>about-us works!</p>
+<div class="inner-about-us">
+    <div class="intro">
+        <div class="titles">
+            <h3 class="title">Mana Sanctuary</h3>
+            <h4 class="subtitle">Project Team</h4>
+        </div>
+        <p class="description">Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Lorem ipsum dolor sit amet, consecte tur adipiscing elit.</p>
+        <div class="discord">
+            <a href="https://discord.gg/FPtYFtpUF3" target="_blank" class="hyperlink-image">
+                <img src="../../assets/other/discord-bubble.png" alt="Discord Icon" class="icon">
+            </a>
+            <p class="text">If you wish to help with this project and become part of the team or join the Tower of Fantasy crew you can contact us on 
+                <a href="https://discord.gg/FPtYFtpUF3" target="_blank" class="hyperlink">Discord.</a>
+            </p>
+        </div>
+    </div>
+</div>
