--- a/src/app/about-us/about-us.component.scss
+++ b/src/app/about-us/about-us.component.scss
@@ -1,1 +1,50 @@
 @import '../../styles.scss';
+
+.inner-about-us {
+    max-width: 1220px;
+    width: 100%;
+    padding: 0 20px;
+    display: flex;
+    flex-direction: column;
+
+    .intro {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+
+        .titles {
+            display: flex;
+            flex-direction: column;
+            gap: 4px;
+    
+            .title {
+                font-size: 36px;
+                font-weight: bold;
+                margin: unset;
+            }
+    
+            .subtitle {
+                font-size: 24px;
+                font-weight: 200;
+                color: $link;
+                margin: unset;
+            }
+        }
+
+        .description {
+            margin: unset;
+        }
+
+        .discord {
+            display: flex;
+            align-items: center;
+            gap: 16px;
+
+            .text {
+                max-width: 500px;
+                width: 100%;
+                margin: unset;
+            }
+        }
+    }
+}
