--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -24,31 +24,36 @@
             cursor: pointer;
             text-decoration: none;
             color: $white;
-            a{
+            a {
                 text-decoration: none;
                 color:#f1f1f1;
+                transition: 0.2s ease-out;
 
+                &:hover {
+                    color: $link;
+                }
             }
             // testing hover underline animation
+            // think this animation should be dropped, its inconsistent with the footer and the footer one is simpler and better
 
-            &:after {
-                content: "";
-                position: absolute;
-                width: 100%;
-                transform: scaleX(0);
-                border-radius: 5px;
-                height: 2px;
-                bottom: 0;
-                left: 0;
-                background-color: $white;
-                transform-origin: bottom right;
-                transition: transform 0.25s ease-out;
-            }
+            // &:after {
+            //     content: "";
+            //     position: absolute;
+            //     width: 100%;
+            //     transform: scaleX(0);
+            //     border-radius: 5px;
+            //     height: 2px;
+            //     bottom: 0;
+            //     left: 0;
+            //     background-color: $white;
+            //     transform-origin: bottom right;
+            //     transition: transform 0.25s ease-out;
+            // }
 
-            &:hover:after {
-                transform: scaleX(1);
-                transform-origin: bottom left;
-            }
+            // &:hover:after {
+            //     transform: scaleX(1);
+            //     transform-origin: bottom left;
+            // }
         }
 
         .beta {
