--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -45,25 +45,6 @@
                 line-height: 130%; // 1.3
                 font-style: italic;
             }
-
-            .about-us-btn {
-                display: inline-block;
-                border-radius: 10px;
-                background-color: white;
-                color: black;
-                padding: 8px 16px;
-                font-size: 16px;
-                transition: 0.25s ease;
-                border: 2px solid transparent;
-
-                &:hover {
-                    color: white;
-                    background-color: black;
-                    border: 2px solid white;
-                    -webkit-animation: distort-subtle 5s infinite;
-                    animation: distort-subtle 5s infinite;
-                }
-            }
         }
     }
 }
@@ -194,27 +175,12 @@
                     }
                 }
 
-                .title {
-                    font-size: 24px;
-                    padding: 12px 24px;
-                    line-height: 1.2;
-                    cursor: pointer;
-                    z-index: 1;
+                .special {
                     // sinful shit right here
+                    z-index: 1;
                     position: absolute;
                     right: 148px;
                     top: 122px;
-                    border: 2px solid white;
-                    border-radius: 10px;
-                    transition: 0.25s ease;
-
-                    &:hover {
-                        border: 2px solid transparent;
-                        background-color: white;
-                        color: black;
-                        -webkit-animation: distort-subtle 5s infinite;
-                        animation: distort-subtle 5s infinite;
-                    }
                 }
 
                 .bottom-right {
@@ -354,24 +320,6 @@
                 .buttons-block {
                     display: flex;
                     gap: 10px;
-
-                    .button {
-                        display: inline-block;
-                        border: 2px solid white;
-                        border-radius: 10px;
-                        transition: 0.25s ease;
-                        padding: 12px 24px;
-                        font-size: 24px;
-                        line-height: 1.2;
-
-                        &:hover {
-                            border: 2px solid transparent;
-                            background-color: white;
-                            color: black;
-                            -webkit-animation: distort-subtle 5s infinite;
-                            animation: distort-subtle 5s infinite;
-                        }
-                    }
                 }
             }
         }
@@ -395,16 +343,6 @@
                 font-size: 24px;
                 font-style: italic;
                 font-weight: 400;
-
-                a {
-                    text-decoration: underline;
-                    text-underline-offset: 4px;
-
-                    &:hover {
-                        -webkit-animation: distort-subtle 5s infinite;
-                        animation: distort-subtle 5s infinite;
-                    }
-                }
             }
 
             .images {
